fix overflow

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
     height: 100%;
     overflow-x: hidden !important;
     overflow-y: hidden !important;
+    display: flex;
 }
 
 .container {
@@ -14,6 +15,7 @@ body {
     min-height: 100%;
     display: flex;
     flex-direction: column;
+    flex: 1;
 }
 
 .box {
